tests/testcases/invalid/semantic/99_increment_logical_and_result.ciel
// Error: logical AND result is rvalue
int main() {
    bool a = 1;
    bool b = 1;

    // Error: (a && b) returns bool rvalue
    (a && b)++;

    return 0;
}
